force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechSoldeCompta__c.field-meta.xml
<CustomField>
    <fullName>numm__TechSoldeCompta__c</fullName>
    <label>TechSoldeCompta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>