force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechSoldeComptaNonPoint__c.field-meta.xml
<CustomField>
    <fullName>numm__TechSoldeComptaNonPoint__c</fullName>
    <label>TechSommeComptaNonPoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>