force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechSommeCreditNonPointee__c.field-meta.xml
<CustomField>
    <fullName>numm__TechSommeCreditNonPointee__c</fullName>
    <label>TechSommeCreditNonPointee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>