force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechTotalCreditEntNonPoint__c.field-meta.xml
<CustomField>
    <fullName>numm__TechTotalCreditEntNonPoint__c</fullName>
    <label>TechTotalCreditEntNonPoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>