force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__TechTotalDebitEntNonPoint__c.field-meta.xml
<CustomField>
    <fullName>numm__TechTotalDebitEntNonPoint__c</fullName>
    <label>TechTotalDebitEntNonPoint</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>