force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Type_de_collectif__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_collectif__c</fullName>
    <formula>text(numm__IdCtrlAccounting__r.numm__TypeDeCollectif__c)</formula>
    <label>Type de collectif</label>
    <type>Text</type>
</CustomField>