force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Type_de_compte_Clo__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_compte_Clo__c</fullName>
    <label>Type de compte Clôturé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>