force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__Unite__c.field-meta.xml
<CustomField>
    <fullName>numm__Unite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unité</label>
    <referenceTo>numm__Unit__c</referenceTo>
    <relationshipLabel>Ecritures générales</relationshipLabel>
    <relationshipName>Ecritures_g_n_rales</relationshipName>
    <type>Lookup</type>
</CustomField>