force-app/main/default/objects/numm__VoucherTransaction__c/fields/numm__VisibleApresCloture__c.field-meta.xml
<CustomField>
    <fullName>numm__VisibleApresCloture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible après Clôture</label>
    <type>Checkbox</type>
</CustomField>