force-app/main/default/objects/numm__VoucherTransaction__c/validationRules/numm__PreventUpdateSiLettreeOuPointee.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__PreventUpdateSiLettreeOuPointee</fullName>
    <active>true</active>
    <description>Une écriture générale ne peut pas être modifiée si elle est pointée ou lettrée.</description>
    <errorConditionFormula>NOT($User.numm__BypassRegles__c) &amp;&amp;
NOT(ISBLANK(TEXT(numm__Lettrage_Pointage__c ))) &amp;&amp;
OR(
ISCHANGED(numm__Credit__c),
ISCHANGED( numm__Debit__c ),
ISCHANGED( numm__IdAccountingCode__c ),
ISCHANGED( numm__IdthirdParty__c )
)</errorConditionFormula>
    <errorMessage>Une écriture générale ne peut pas être modifiée si elle est pointée ou lettrée.</errorMessage>
</ValidationRule>