force-app/main/default/objects/numm__VoucherTransaction__c/validationRules/numm__ValidateDebitCreditSide.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__ValidateDebitCreditSide</fullName>
    <active>true</active>
    <description>check if both side fill</description>
    <errorConditionFormula>NOT($User.numm__BypassRegles__c) &amp;&amp; (NOT(ISBLANK( numm__Credit__c))) &amp;&amp; (NOT(ISBLANK(numm__Debit__c)))</errorConditionFormula>
    <errorMessage>L’écriture ne peut pas avoir les champs Débit et Crédit de renseignés</errorMessage>
</ValidationRule>